unpackaged/main/default/objects/AccountReporting__c/AccountReporting__c.object-meta.xml
<CustomObject>
    <label>AccountReporting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountReporting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountReportings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>