unpackaged/main/default/objects/AccountReporting__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AccountReportings</relationshipLabel>
    <relationshipName>AccountReportings</relationshipName>
    <type>Lookup</type>
</CustomField>