unpackaged/main/default/objects/AccountReporting__c/fields/ActualRevenueComments__c.field-meta.xml
<CustomField>
    <fullName>ActualRevenueComments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Revenue Comments</label>
    <type>TextArea</type>
</CustomField>