unpackaged/main/default/objects/AccountReporting__c/fields/ActualRevenueQ1__c.field-meta.xml
<CustomField>
    <fullName>ActualRevenueQ1__c</fullName>
    <label>Actual Revenue Q1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>