unpackaged/main/default/objects/AccountReporting__c/fields/ActualRevenueQ2__c.field-meta.xml
<CustomField>
    <fullName>ActualRevenueQ2__c</fullName>
    <label>Actual Revenue Q2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>