unpackaged/main/default/objects/AccountReporting__c/fields/ActualRevenueQ3__c.field-meta.xml
<CustomField>
    <fullName>ActualRevenueQ3__c</fullName>
    <label>Actual Revenue Q3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>