unpackaged/main/default/objects/AccountReporting__c/fields/AvgCollectionPeriodComts__c.field-meta.xml
<CustomField>
    <fullName>AvgCollectionPeriodComts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Avg Collection Period Comts</label>
    <type>TextArea</type>
</CustomField>