unpackaged/main/default/objects/AccountReporting__c/fields/AvgCollectionPeriodQ1__c.field-meta.xml
<CustomField>
    <fullName>AvgCollectionPeriodQ1__c</fullName>
    <label>Avg Collection Period Q1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>