unpackaged/main/default/objects/AccountReporting__c/fields/AvgCollectionPeriodQ3__c.field-meta.xml
<CustomField>
    <fullName>AvgCollectionPeriodQ3__c</fullName>
    <label>Avg Collection Period Q3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>