unpackaged/main/default/objects/AccountReporting__c/fields/AvgCollectionPeriodYTD__c.field-meta.xml
<CustomField>
    <fullName>AvgCollectionPeriodYTD__c</fullName>
    <label>Avg Collection Period YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>