unpackaged/main/default/objects/AccountReporting__c/fields/BudgetRevenueQ1__c.field-meta.xml
<CustomField>
    <fullName>BudgetRevenueQ1__c</fullName>
    <label>Budget Revenue Q1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>