unpackaged/main/default/objects/AccountReporting__c/fields/BudgetRevenueQ2__c.field-meta.xml
<CustomField>
    <fullName>BudgetRevenueQ2__c</fullName>
    <label>Budget Revenue Q2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>