unpackaged/main/default/objects/AccountReporting__c/fields/CollectedAmtComts__c.field-meta.xml
<CustomField>
    <fullName>CollectedAmtComts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>% Collected Amt Comts</label>
    <type>TextArea</type>
</CustomField>