unpackaged/main/default/objects/AccountReporting__c/fields/CollectedAmtQ1__c.field-meta.xml
<CustomField>
    <fullName>CollectedAmtQ1__c</fullName>
    <label>% Collected Amt Q1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>