unpackaged/main/default/objects/AccountReporting__c/fields/CollectedAmtQ4__c.field-meta.xml
<CustomField>
    <fullName>CollectedAmtQ4__c</fullName>
    <label>% Collected Amt Q4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>