unpackaged/main/default/objects/AccountReporting__c/fields/CollectedAmtYTD__c.field-meta.xml
<CustomField>
    <fullName>CollectedAmtYTD__c</fullName>
    <label>% Collected Amt YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>