unpackaged/main/default/objects/AccountReporting__c/fields/CreditTermQ1__c.field-meta.xml
<CustomField>
    <fullName>CreditTermQ1__c</fullName>
    <label>Credit Term Q1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>