unpackaged/main/default/objects/AccountReporting__c/fields/CreditTermQ4__c.field-meta.xml
<CustomField>
    <fullName>CreditTermQ4__c</fullName>
    <label>Credit Term Q4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>