unpackaged/main/default/objects/AccountReporting__c/fields/DiffCreditTermVsCollectionComts_c__c.field-meta.xml
<CustomField>
    <fullName>DiffCreditTermVsCollectionComts_c__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Diff Credit Term vs Collection Comts</label>
    <type>TextArea</type>
</CustomField>