unpackaged/main/default/objects/AccountReporting__c/fields/DiffCreditTermVsCollectionPeriodQ1__c.field-meta.xml
<CustomField>
    <fullName>DiffCreditTermVsCollectionPeriodQ1__c</fullName>
    <formula>CreditTermQ1__c - AvgCollectionPeriodQ1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff Credit Term vs Collection Period Q1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>