unpackaged/main/default/objects/AccountReporting__c/fields/DiffCreditTermVsCollectionPeriodQ2__c.field-meta.xml
<CustomField>
    <fullName>DiffCreditTermVsCollectionPeriodQ2__c</fullName>
    <formula>CreditTermQ2__c - AvgCollectionPeriodQ2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff Credit Term vs Collection Period Q2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>