unpackaged/main/default/objects/AccountReporting__c/fields/DiffCreditTermVsCollectionPeriodQ3__c.field-meta.xml
<CustomField>
    <fullName>DiffCreditTermVsCollectionPeriodQ3__c</fullName>
    <formula>CreditTermQ3__c - AvgCollectionPeriodQ3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff Credit Term vs Collection Period Q3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>