unpackaged/main/default/objects/AccountReporting__c/fields/DifferenceComts__c.field-meta.xml
<CustomField>
    <fullName>DifferenceComts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Difference Comts</label>
    <type>TextArea</type>
</CustomField>