unpackaged/main/default/objects/AccountReporting__c/fields/Interval1Q4__c.field-meta.xml
<CustomField>
    <fullName>Interval1Q4__c</fullName>
    <label>0 - 30 Q4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>