unpackaged/main/default/objects/AccountReporting__c/fields/Interval1QYTD__c.field-meta.xml
<CustomField>
    <fullName>Interval1QYTD__c</fullName>
    <label>0 - 30 YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>