unpackaged/main/default/objects/AccountReporting__c/fields/Interval2Q1__c.field-meta.xml
<CustomField>
    <fullName>Interval2Q1__c</fullName>
    <label>31 - 60 Q1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>