unpackaged/main/default/objects/AccountReporting__c/fields/Interval3QYTD__c.field-meta.xml
<CustomField>
    <fullName>Interval3QYTD__c</fullName>
    <label>61 - 90 YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>