unpackaged/main/default/objects/AccountReporting__c/fields/Interval5Comts__c.field-meta.xml
<CustomField>
    <fullName>Interval5Comts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interval5Comts</label>
    <type>TextArea</type>
</CustomField>