unpackaged/main/default/objects/AccountReporting__c/fields/Interval5QYTD__c.field-meta.xml
<CustomField>
    <fullName>Interval5QYTD__c</fullName>
    <label>181 - 365 YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>