unpackaged/main/default/objects/AccountReporting__c/fields/Interval6Comts__c.field-meta.xml
<CustomField>
    <fullName>Interval6Comts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interval6Comts</label>
    <type>TextArea</type>
</CustomField>