unpackaged/main/default/objects/AccountReporting__c/fields/NetOperatingProfitComts__c.field-meta.xml
<CustomField>
    <fullName>NetOperatingProfitComts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Net Operating Profit Comts</label>
    <type>TextArea</type>
</CustomField>