unpackaged/main/default/objects/AccountReporting__c/fields/NetOperatingProfitFY__c.field-meta.xml
<CustomField>
    <fullName>NetOperatingProfitFY__c</fullName>
    <label>Net Operating Profit FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>