unpackaged/main/default/objects/AccountReporting__c/fields/NetOperatingProfitMarginComts__c.field-meta.xml
<CustomField>
    <fullName>NetOperatingProfitMarginComts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Net Operating Profit Margin (%) Comts</label>
    <type>TextArea</type>
</CustomField>