unpackaged/main/default/objects/AccountReporting__c/fields/NetOperatingProfitMarginFY__c.field-meta.xml
<CustomField>
    <fullName>NetOperatingProfitMarginFY__c</fullName>
    <label>Net Operating Profit Margin (%) FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>