unpackaged/main/default/objects/AccountReporting__c/fields/NetOperatingProfitMarginQ1__c.field-meta.xml
<CustomField>
    <fullName>NetOperatingProfitMarginQ1__c</fullName>
    <label>Net Operating Profit Margin (%) Q1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>