unpackaged/main/default/objects/AccountReporting__c/fields/NetOperatingProfitMarginQ2__c.field-meta.xml
<CustomField>
    <fullName>NetOperatingProfitMarginQ2__c</fullName>
    <label>Net Operating Profit Margin (%) Q2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>