unpackaged/main/default/objects/AccountReporting__c/fields/NetOperatingProfitMarginQ3__c.field-meta.xml
<CustomField>
    <fullName>NetOperatingProfitMarginQ3__c</fullName>
    <label>Net Operating Profit Margin (%) Q3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>