unpackaged/main/default/objects/AccountReporting__c/fields/NetOperatingProfitQ1__c.field-meta.xml
<CustomField>
    <fullName>NetOperatingProfitQ1__c</fullName>
    <label>Net Operating Profit Q1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>