unpackaged/main/default/objects/AccountReporting__c/fields/NetOperatingProfitQ2__c.field-meta.xml
<CustomField>
    <fullName>NetOperatingProfitQ2__c</fullName>
    <label>Net Operating Profit Q2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>