unpackaged/main/default/objects/AccountReporting__c/fields/OutstandingPaymentAmtQ1__c.field-meta.xml
<CustomField>
    <fullName>OutstandingPaymentAmtQ1__c</fullName>
    <label>Outstanding Payment Amt Q1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>