unpackaged/main/default/objects/AccountReporting__c/fields/OutstandingPaymentAmtQ4__c.field-meta.xml
<CustomField>
    <fullName>OutstandingPaymentAmtQ4__c</fullName>
    <label>Outstanding Payment Amt Q4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>