unpackaged/main/default/objects/AccountReporting__c/fields/OutstPayAmtIncDecComts__c.field-meta.xml
<CustomField>
    <fullName>OutstPayAmtIncDecComts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outst Pay Amt Inc &amp; Dec Comts</label>
    <type>TextArea</type>
</CustomField>