unpackaged/main/default/objects/AccountReporting__c/fields/OutstPayAmtIncDecQ2__c.field-meta.xml
<CustomField>
    <fullName>OutstPayAmtIncDecQ2__c</fullName>
    <label>Outst Pay Amt Inc &amp; Dec Q2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>