unpackaged/main/default/objects/AccountReporting__c/fields/OutstPayAmtIncDecQ3__c.field-meta.xml
<CustomField>
    <fullName>OutstPayAmtIncDecQ3__c</fullName>
    <label>Outst Pay Amt Inc &amp; Dec Q3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>