unpackaged/main/default/objects/AccountReporting__c/fields/OutstPayAmtIncDecQ4__c.field-meta.xml
<CustomField>
    <fullName>OutstPayAmtIncDecQ4__c</fullName>
    <label>Outst Pay Amt Inc &amp; Dec Q4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>