unpackaged/main/default/objects/AccountReporting__c/fields/OutstPayComts__c.field-meta.xml
<CustomField>
    <fullName>OutstPayComts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outst Pay Comments</label>
    <type>TextArea</type>
</CustomField>