unpackaged/main/default/objects/AccountReporting__c/fields/PercentageCollectedComts__c.field-meta.xml
<CustomField>
    <fullName>PercentageCollectedComts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Percentage Collected Comt</label>
    <type>TextArea</type>
</CustomField>