unpackaged/main/default/objects/AccountReporting__c/fields/RevActvsBudgetComments__c.field-meta.xml
<CustomField>
    <fullName>RevActvsBudgetComments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revenue (Actual vs Budget) Comments</label>
    <type>TextArea</type>
</CustomField>