unpackaged/main/default/objects/AccountReporting__c/fields/RevenueActualVSBudgetQ3__c.field-meta.xml
<CustomField>
    <fullName>RevenueActualVSBudgetQ3__c</fullName>
    <formula>ActualRevenueQ3__c - BudgetRevenueQ3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue (Actual vs Budget) Q3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>