unpackaged/main/default/objects/AccountReporting__c/fields/TotalReceivableQ1__c.field-meta.xml
<CustomField>
    <fullName>TotalReceivableQ1__c</fullName>
    <label>Total Receivable Q1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>