unpackaged/main/default/objects/AccountReporting__c/fields/TotalReceivableQ2__c.field-meta.xml
<CustomField>
    <fullName>TotalReceivableQ2__c</fullName>
    <label>Total Receivable Q2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>