unpackaged/main/default/objects/AccountReporting__c/fields/TotalReceivableQ3__c.field-meta.xml
<CustomField>
    <fullName>TotalReceivableQ3__c</fullName>
    <label>Total Receivable Q3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>